--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 07:05:03 2018</p>
+         Last Run: Wed Jul 11 08:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 07:05:03 2018</p>
+         Last Run: Wed Jul 11 08:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 07:05:03 2018</p>
+         Last Run: Wed Jul 11 08:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -510,23 +510,23 @@
                         <td>15</td>
                         <td>15</td>
                         <td>0</td>
-                        <td>53</td>
+                        <td>50</td>
                         <td>2</td>
-                        <td>10</td>
-                        <td>SW</td>
+                        <td>11</td>
+                        <td>SSW</td>
                         <td>3</td>
                      </tr>
                      <tr>
                         <td>10:00 AM</td>
                         <td>Clear</td>
-                        <td>17</td>
-                        <td>17</td>
+                        <td>18</td>
+                        <td>18</td>
                         <td>0</td>
-                        <td>46</td>
+                        <td>43</td>
                         <td>3</td>
                         <td>11</td>
-                        <td>SW</td>
-                        <td>4</td>
+                        <td>SSW</td>
+                        <td>3</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
@@ -534,10 +534,10 @@
                         <td>19</td>
                         <td>19</td>
                         <td>0</td>
-                        <td>41</td>
+                        <td>39</td>
                         <td>4</td>
                         <td>11</td>
-                        <td>SSW</td>
+                        <td>S</td>
                         <td>4</td>
                      </tr>
                      <tr>
@@ -546,11 +546,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>36</td>
+                        <td>35</td>
                         <td>6</td>
                         <td>11</td>
                         <td>S</td>
-                        <td>5</td>
+                        <td>4</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
@@ -558,9 +558,9 @@
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>35</td>
+                        <td>33</td>
                         <td>7</td>
-                        <td>11</td>
+                        <td>13</td>
                         <td>S</td>
                         <td>6</td>
                      </tr>
@@ -609,7 +609,7 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "15",
-                 "17",
+                 "18",
                  "19",
                  "21",
                  "22"
@@ -622,7 +622,7 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "15",
-                 "17",
+                 "18",
                  "19",
                  "21",
                  "22"
@@ -690,11 +690,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "53",
-                 "46",
-                 "41",
-                 "36",
-                 "35"
+                 "50",
+                 "43",
+                 "39",
+                 "35",
+                 "33"
                ]
              },
              {
@@ -703,9 +703,9 @@
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
                  "3",
+                 "3",
                  "4",
                  "4",
-                 "5",
                  "6"
                ]
              }
@@ -723,7 +723,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 07:05:03 2018</p>
+         Last Run: Wed Jul 11 08:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -760,7 +760,7 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>32</td>
                         <td>1</td>
                         <td>18</td>
                         <td>ENE</td>
@@ -772,11 +772,11 @@
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>39</td>
+                        <td>38</td>
                         <td>0</td>
                         <td>16</td>
                         <td>E</td>
-                        <td>12</td>
+                        <td>13</td>
                      </tr>
                   </tbody>
                </table>
@@ -895,8 +895,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "29",
-                 "33",
-                 "39"
+                 "32",
+                 "38"
                ]
              },
              {
@@ -906,7 +906,7 @@
                "data":[
                  "21",
                  "17",
-                 "12"
+                 "13"
                ]
              }
            ]
@@ -923,7 +923,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 07:05:03 2018</p>
+         Last Run: Wed Jul 11 08:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -945,38 +945,38 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>25</td>
-                        <td>25</td>
-                        <td>6</td>
-                        <td>31</td>
+                        <td>27</td>
+                        <td>27</td>
+                        <td>0</td>
+                        <td>26</td>
                         <td>1</td>
                         <td>16</td>
-                        <td>SE</td>
-                        <td>11</td>
+                        <td>SSE</td>
+                        <td>9</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Clear</td>
-                        <td>24</td>
-                        <td>24</td>
-                        <td>6</td>
-                        <td>34</td>
+                        <td>25</td>
+                        <td>25</td>
+                        <td>0</td>
+                        <td>32</td>
                         <td>0</td>
                         <td>16</td>
                         <td>SE</td>
-                        <td>10</td>
+                        <td>8</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>11</td>
-                        <td>39</td>
+                        <td>5</td>
+                        <td>40</td>
                         <td>0</td>
-                        <td>14</td>
-                        <td>SE</td>
-                        <td>8</td>
+                        <td>16</td>
+                        <td>ESE</td>
+                        <td>7</td>
                      </tr>
                   </tbody>
                </table>
@@ -1020,8 +1020,8 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
+                 "27",
                  "25",
-                 "24",
                  "22"
                ]
              },
@@ -1031,8 +1031,8 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
+                 "27",
                  "25",
-                 "24",
                  "22"
                ]
              }
@@ -1084,9 +1084,9 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "6",
-                 "6",
-                 "11"
+                 "0",
+                 "0",
+                 "5"
                ]
              },
              {
@@ -1094,9 +1094,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "31",
-                 "34",
-                 "39"
+                 "26",
+                 "32",
+                 "40"
                ]
              },
              {
@@ -1104,9 +1104,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "11",
-                 "10",
-                 "8"
+                 "9",
+                 "8",
+                 "7"
                ]
              }
            ]
