--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 11:05:21 2018</p>
+         Last Run: Wed Jul 11 12:05:25 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. Foothills 01 DA - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Thursday Jul 12, 2018 -  6:30PM til  8:30PM</H4>
                <table class="table table-striped">
@@ -34,7 +34,7 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>30</td>
+                        <td>31</td>
                         <td>4</td>
                         <td>8</td>
                         <td>SSE</td>
@@ -48,7 +48,7 @@
                         <td>0</td>
                         <td>29</td>
                         <td>2</td>
-                        <td>10</td>
+                        <td>8</td>
                         <td>S</td>
                         <td>20</td>
                      </tr>
@@ -60,9 +60,9 @@
                         <td>0</td>
                         <td>29</td>
                         <td>1</td>
-                        <td>10</td>
-                        <td>SSE</td>
-                        <td>16</td>
+                        <td>8</td>
+                        <td>SE</td>
+                        <td>19</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -74,19 +74,19 @@
                         <td>0</td>
                         <td>10</td>
                         <td>SSE</td>
-                        <td>11</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Clear</td>
                         <td>22</td>
                         <td>22</td>
-                        <td>0</td>
+                        <td>1</td>
                         <td>40</td>
                         <td>0</td>
                         <td>10</td>
-                        <td>SSE</td>
-                        <td>7</td>
+                        <td>SE</td>
+                        <td>8</td>
                      </tr>
                   </tbody>
                </table>
@@ -206,7 +206,7 @@
                  "0",
                  "0",
                  "0",
-                 "0"
+                 "1"
                ]
              },
              {
@@ -214,7 +214,7 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "30",
+                 "31",
                  "29",
                  "29",
                  "32",
@@ -228,9 +228,9 @@
                "data":[
                  "16",
                  "20",
-                 "16",
-                 "11",
-                 "7"
+                 "19",
+                 "12",
+                 "8"
                ]
              }
            ]
@@ -247,7 +247,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 11:05:21 2018</p>
+         Last Run: Wed Jul 11 12:05:25 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. WHU Monaco - Rundle College</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 14, 2018 - 11:30AM til  2:00PM</H4>
                <table class="table table-striped">
@@ -271,60 +271,60 @@
                         <td>Chance of Rain</td>
                         <td>11</td>
                         <td>11</td>
-                        <td>49</td>
-                        <td>75</td>
+                        <td>31</td>
+                        <td>74</td>
                         <td>2</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>NW</td>
-                        <td>80</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>11:00 AM</td>
-                        <td>Chance of Rain</td>
+                        <td>Overcast</td>
                         <td>12</td>
                         <td>12</td>
-                        <td>43</td>
-                        <td>64</td>
+                        <td>11</td>
+                        <td>63</td>
                         <td>2</td>
-                        <td>16</td>
+                        <td>14</td>
                         <td>NNW</td>
-                        <td>92</td>
+                        <td>91</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Overcast</td>
                         <td>14</td>
                         <td>14</td>
-                        <td>24</td>
-                        <td>54</td>
+                        <td>4</td>
+                        <td>53</td>
                         <td>3</td>
-                        <td>14</td>
+                        <td>13</td>
                         <td>NNW</td>
-                        <td>94</td>
+                        <td>92</td>
                      </tr>
                      <tr>
                         <td>01:00 PM</td>
-                        <td>Overcast</td>
-                        <td>15</td>
-                        <td>15</td>
-                        <td>7</td>
-                        <td>50</td>
+                        <td>Mostly Cloudy</td>
+                        <td>16</td>
+                        <td>16</td>
+                        <td>1</td>
+                        <td>48</td>
                         <td>4</td>
-                        <td>13</td>
+                        <td>10</td>
                         <td>NW</td>
-                        <td>86</td>
+                        <td>79</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>16</td>
-                        <td>16</td>
-                        <td>7</td>
-                        <td>45</td>
-                        <td>5</td>
-                        <td>11</td>
+                        <td>17</td>
+                        <td>17</td>
+                        <td>1</td>
+                        <td>41</td>
+                        <td>6</td>
+                        <td>10</td>
                         <td>NW</td>
-                        <td>78</td>
+                        <td>65</td>
                      </tr>
                   </tbody>
                </table>
@@ -373,8 +373,8 @@
                  "11",
                  "12",
                  "14",
-                 "15",
-                 "16"
+                 "16",
+                 "17"
                ]
              },
              {
@@ -386,8 +386,8 @@
                  "11",
                  "12",
                  "14",
-                 "15",
-                 "16"
+                 "16",
+                 "17"
                ]
              }
            ]
@@ -440,11 +440,11 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "49",
-                 "43",
-                 "24",
-                 "7",
-                 "7"
+                 "31",
+                 "11",
+                 "4",
+                 "1",
+                 "1"
                ]
              },
              {
@@ -452,11 +452,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "75",
-                 "64",
-                 "54",
-                 "50",
-                 "45"
+                 "74",
+                 "63",
+                 "53",
+                 "48",
+                 "41"
                ]
              },
              {
@@ -464,11 +464,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "80",
+                 "79",
+                 "91",
                  "92",
-                 "94",
-                 "86",
-                 "78"
+                 "79",
+                 "65"
                ]
              }
            ]
@@ -485,7 +485,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 11:05:21 2018</p>
+         Last Run: Wed Jul 11 12:05:25 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">World Cup Final Game - Coach Tyler's House - Coach Tyler's</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Sunday Jul 15, 2018 -  9:00AM til  1:00PM</H4>
                <table class="table table-striped">
@@ -510,7 +510,7 @@
                         <td>15</td>
                         <td>15</td>
                         <td>0</td>
-                        <td>51</td>
+                        <td>50</td>
                         <td>2</td>
                         <td>11</td>
                         <td>SSW</td>
@@ -522,7 +522,7 @@
                         <td>18</td>
                         <td>18</td>
                         <td>0</td>
-                        <td>43</td>
+                        <td>42</td>
                         <td>3</td>
                         <td>11</td>
                         <td>SSW</td>
@@ -690,8 +690,8 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "51",
-                 "43",
+                 "50",
+                 "42",
                  "39",
                  "35",
                  "33"
@@ -723,7 +723,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 11:05:21 2018</p>
+         Last Run: Wed Jul 11 12:05:25 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Conditioning/Sport Psych - SWU Complex</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Monday Jul 16, 2018 -  6:30PM til  7:30PM</H4>
                <table class="table table-striped">
@@ -752,7 +752,7 @@
                         <td>2</td>
                         <td>16</td>
                         <td>ENE</td>
-                        <td>21</td>
+                        <td>16</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -760,11 +760,11 @@
                         <td>23</td>
                         <td>23</td>
                         <td>0</td>
-                        <td>33</td>
+                        <td>32</td>
                         <td>1</td>
                         <td>18</td>
                         <td>ENE</td>
-                        <td>17</td>
+                        <td>12</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
@@ -772,11 +772,11 @@
                         <td>22</td>
                         <td>22</td>
                         <td>0</td>
-                        <td>39</td>
+                        <td>38</td>
                         <td>0</td>
-                        <td>16</td>
+                        <td>18</td>
                         <td>E</td>
-                        <td>12</td>
+                        <td>9</td>
                      </tr>
                   </tbody>
                </table>
@@ -895,8 +895,8 @@
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
                  "29",
-                 "33",
-                 "39"
+                 "32",
+                 "38"
                ]
              },
              {
@@ -904,9 +904,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "21",
-                 "17",
-                 "12"
+                 "16",
+                 "12",
+                 "9"
                ]
              }
            ]
@@ -923,7 +923,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Wed Jul 11 11:05:21 2018</p>
+         Last Run: Wed Jul 11 12:05:25 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 17, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -945,8 +945,8 @@
                      <tr>
                         <td>07:00 PM</td>
                         <td>Clear</td>
-                        <td>28</td>
-                        <td>28</td>
+                        <td>27</td>
+                        <td>27</td>
                         <td>0</td>
                         <td>27</td>
                         <td>1</td>
@@ -1020,7 +1020,7 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "28",
+                 "27",
                  "25",
                  "22"
                ]
@@ -1031,7 +1031,7 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "28",
+                 "27",
                  "25",
                  "22"
                ]
